--- a/libs/client-web/browse/feature/books/src/lib/search/search.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/search/search.component.html
@@ -8,7 +8,7 @@
     [fluid]="true"
     placeholder="Search by title"
   />
-  @if (searchInput.value.length) {
+  @if (!!search()) {
     <p-button
       class="absolute top-1/2 right-0 mr-2 -translate-y-1/2"
       icon="pi pi-trash"
