--- a/apps/admin-dashboard/src/styles.css
+++ b/apps/admin-dashboard/src/styles.css
@@ -1,3 +1,5 @@
+@import 'primeicons/primeicons.css';
+
 @layer tailwind-base, primevue, tailwind-utilities;
 
 @layer tailwind-base {
@@ -7,4 +9,17 @@
 @layer tailwind-utilities {
   @tailwind components;
   @tailwind utilities;
+}
+
+body {
+  font-family: var(--font-family);
+  min-height: 100vh;
+  max-width: 3840px;
+  width: 100%;
+  background-color: var(--p-surface-100);
+  overflow-x: hidden;
+}
+
+body.dark {
+  background-color: var(--p-surface-950);
 }
