Moved nav component to core domain

--- a/libs/client-web/core/feature/nav/src/lib/nav/nav.component.html
+++ b/libs/client-web/core/feature/nav/src/lib/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="w-full flex items-center sticky bottom-0 left-0 right-0 xl:hidden">
-  <p-toolbar class="w-full" appNavToolbar>
+  <p-toolbar class="w-full" styleClass="rounded-t-base mx-auto">
     <div class="mx-auto max-w-lg w-full flex items-center justify-evenly gap-4">
       <p-button
         libNavButton
