--- a/libs/client-web/account/domain/account-data/src/lib/account-data.component.html
+++ b/libs/client-web/account/domain/account-data/src/lib/account-data.component.html
@@ -46,7 +46,7 @@
 
 <p-dialog
   [header]="dialogHeader()"
-  [visible]="isSidebarVisible()"
+  [visible]="isDialogVisible()"
   [modal]="true"
   styleClass="w-full max-w-[48rem] mx-4 w-full"
   (visibleChange)="setEditingField(null)"
