--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -1,5 +1,5 @@
 <header
-  class="w-full flex flex-col-reverse justify-center relative bg-content-background p-4 rounded-base 2xl:grid 2xl:grid-cols-2 2xl:place-items-center"
+  class="w-full flex flex-col-reverse justify-center relative 2xl:grid 2xl:grid-cols-2 2xl:place-items-center"
 >
   <div class="flex flex-col gap-4 lg:gap-8">
     <h2
