--- a/libs/client-web/core/feature/nav/src/lib/nav/nav.component.html
+++ b/libs/client-web/core/feature/nav/src/lib/nav/nav.component.html
@@ -5,12 +5,12 @@
         libNavButton
         size="large"
         icon="pi pi-bars"
-        (onClick)="toggleNavigation()"
+        (onClick)="toggleMobileDrawer()"
       />
       <p-button
         libNavButton
         size="large"
-        [routerLink]="appRoutePaths.BOOKS()"
+        [routerLink]="urls().books"
         routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
         [queryParams]="null"
         [state]="{ clearFilters: true }"
@@ -19,14 +19,14 @@
       <p-button
         libNavButton
         size="large"
-        [routerLink]="appRoutePaths.HOME()"
+        [routerLink]="urls().home"
         routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
         icon="pi pi-home"
       />
       <p-button
         libNavButton
         size="large"
-        [routerLink]="appRoutePaths.ORDERS()"
+        [routerLink]="urls().orders"
         icon="pi pi-user"
       />
       <lib-cart-sidebar />
@@ -34,7 +34,7 @@
   </p-toolbar>
 </div>
 
-<p-drawer libDrawerLeft [(visible)]="isOpen">
+<p-drawer libDrawerLeft [(visible)]="isMobileDrawerOpened">
   <p-header>
     <ng-container [ngTemplateOutlet]="logo" />
   </p-header>
@@ -54,7 +54,7 @@
           <ng-container [ngTemplateOutlet]="logo" />
         } @else {
           <a
-            [routerLink]="appRoutePaths.HOME()"
+            [routerLink]="urls().home"
             routerLinkActive="bg-surface-100 dark:bg-surface-700 rounded-base"
             class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
           >
@@ -65,7 +65,7 @@
       <p-divider />
       <ul class="flex flex-col">
         <a
-          [routerLink]="appRoutePaths.BOOKS()"
+          [routerLink]="urls().books"
           routerLinkActive="bg-surface-100 dark:bg-surface-700"
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
           [queryParams]="null"
@@ -84,7 +84,7 @@
       <lib-cart-sidebar [isLabelShowed]="isLabelShowed()" />
       @if (isAuthenticated()) {
         <a
-          [routerLink]="appRoutePaths.ORDERS()"
+          [routerLink]="urls().orders"
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
           <i class="pi pi-user"></i>
@@ -103,7 +103,7 @@
         </button>
       } @else {
         <a
-          [routerLink]="appRoutePaths.LOGIN()"
+          [routerLink]="urls().login"
           routerLinkActive="bg-surface-100 dark:bg-surface-700"
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
@@ -113,7 +113,7 @@
           }
         </a>
         <a
-          [routerLink]="appRoutePaths.REGISTER()"
+          [routerLink]="urls().register"
           routerLinkActive="bg-surface-100 dark:bg-surface-700"
           class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         >
@@ -158,7 +158,7 @@
 
 <ng-template #logo>
   <a
-    [routerLink]="appRoutePaths.HOME()"
+    [routerLink]="urls().home"
     [queryParams]="null"
     class="text-xl no-underline flex items-center justify-center"
   >
@@ -171,7 +171,7 @@
   @if (isAccountRouteActive()) {
     @for (menuItem of menuItems(); track menuItem.label) {
       <a
-        (click)="isOpen.set(false)"
+        (click)="closeMobileDrawer()"
         [routerLink]="menuItem.routerLink"
         routerLinkActive="bg-surface-100 dark:bg-surface-700"
         class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
@@ -185,14 +185,14 @@
   } @else {
     @for (category of categories(); track category.id) {
       <a
-        (click)="isOpen.set(false)"
-        [routerLink]="appRoutePaths.BOOKS()"
+        (click)="closeMobileDrawer()"
+        [routerLink]="urls().books"
         [queryParams]="{ categories: category.name }"
         class="text-muted-color px-3 h-10 flex items-center gap-4 !rounded-base overflow-hidden hover:bg-surface-200 hover:dark:bg-surface-600"
         [state]="{ clearFilters: true }"
       >
         <span>
-          {{ isLabelShowed() ? category.name : category.name.slice(0, 2) }}
+          {{ category.name | getName: isLabelShowed() }}
         </span>
       </a>
     }
