Fixed hydration loading and changed project nav name

--- a/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
+++ b/libs/client-web/shared/ui/src/lib/books-grid/books-grid.component.html
@@ -1,37 +1,47 @@
 <div class="flex @container">
-  @if (loading() && books().length === 0) {
+  @defer (hydrate on hover) {
+    @if (loading() && books().length === 0) {
+      <div
+        class="w-full grid grid-cols-1 gap-base @xl:grid-cols-2 @3xl:grid-cols-3 @5xl:grid-cols-4 @8xl:grid-cols-5 @9xl:grid-cols-6 @10xl:grid-cols-7 @11xl:grid-cols-8 @12xl:grid-cols-9 @13xl:grid-cols-10 @14xl:grid-cols-11"
+      >
+        @for (_ of skeleconts(); track $index) {
+          <lib-book-card-skeleton />
+        }
+      </div>
+    } @else if (error()) {
+      <div class="w-full mt-12 col-span-full text-center text-4xl font-bold">
+        @for (error of errors(); track $index) {
+          <div class="text-center">{{ error }}</div>
+        }
+      </div>
+    } @else if (books()) {
+      <div
+        class="w-full grid grid-cols-1 gap-base @xl:grid-cols-2 @3xl:grid-cols-3 @5xl:grid-cols-4 @8xl:grid-cols-5 @9xl:grid-cols-6 @10xl:grid-cols-7 @11xl:grid-cols-8 @12xl:grid-cols-9 @13xl:grid-cols-10 @14xl:grid-cols-11"
+        [ngClass]="{
+          loading: loading() && books().length,
+        }"
+      >
+        @for (book of books(); track book.id) {
+          <lib-book-card
+            [book]="book"
+            [awaitingBookIdsToAddToCart]="pendingBookIds()"
+            (onAddToCart)="addToCartEvent.emit($event)"
+          />
+        } @empty {
+          <div
+            class="w-full mt-12 col-start-1 col-span-full text-center text-4xl font-bold"
+          >
+            No books were found!
+          </div>
+        }
+      </div>
+    }
+  } @placeholder {
     <div
       class="w-full grid grid-cols-1 gap-base @xl:grid-cols-2 @3xl:grid-cols-3 @5xl:grid-cols-4 @8xl:grid-cols-5 @9xl:grid-cols-6 @10xl:grid-cols-7 @11xl:grid-cols-8 @12xl:grid-cols-9 @13xl:grid-cols-10 @14xl:grid-cols-11"
     >
       @for (_ of skeleconts(); track $index) {
         <lib-book-card-skeleton />
-      }
-    </div>
-  } @else if (error()) {
-    <div class="w-full mt-12 col-span-full text-center text-4xl font-bold">
-      @for (error of errors(); track $index) {
-        <div class="text-center">{{ error }}</div>
-      }
-    </div>
-  } @else if (books()) {
-    <div
-      class="w-full grid grid-cols-1 gap-base @xl:grid-cols-2 @3xl:grid-cols-3 @5xl:grid-cols-4 @8xl:grid-cols-5 @9xl:grid-cols-6 @10xl:grid-cols-7 @11xl:grid-cols-8 @12xl:grid-cols-9 @13xl:grid-cols-10 @14xl:grid-cols-11"
-      [ngClass]="{
-        loading: loading() && books().length,
-      }"
-    >
-      @for (book of books(); track book.id) {
-        <lib-book-card
-          [book]="book"
-          [awaitingBookIdsToAddToCart]="pendingBookIds()"
-          (onAddToCart)="addToCartEvent.emit($event)"
-        />
-      } @empty {
-        <div
-          class="w-full mt-12 col-start-1 col-span-full text-center text-4xl font-bold"
-        >
-          No books were found!
-        </div>
       }
     </div>
   }
