Fixed tags redirect from home component

--- a/libs/client-web/home/feature/src/lib/home.component.html
+++ b/libs/client-web/home/feature/src/lib/home.component.html
@@ -33,6 +33,7 @@
         <a
           [routerLink]="appRoutePaths.BOOKS()"
           [queryParams]="section.queryParams"
+          [state]="{ clearFilters: true }"
         >
           See more
         </a>
